# photon_mapping_measure_cycle

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile2  README.md  c1_diffuse.tga  c1b.tga  c1b_005_dirvis_2.tga  c1b_128x96.tga  c1b_128x96_1.tga  c1b_128x96_2.tga  c1b_128x96_4.tga  c1b_16_16_0.5_112_4y.tga  c1b_16_16_0.5_192_4y.tga  c1b_16_16_0.5_224_4y.tga  c1b_16_16_0.5_256_4y.tga  c1b_16_16_0.5_40_4y.tga  c1b_16_16_0.5_64_4y.tga  c1b_16_16_0.5_80_4y.tga  c1b_16_16_0.5_96_4y.tga  c1b_32_32_0.5_0_2x.tga  c1b_32_32_0.5_16_2x.tga  c1b_32_32_0.5_24_2x.tga  c1b_32_32_0.5_32_2x.tga  c1b_32_32_0.5_40_2x.tga  c1b_32_32_0.5_8_2x.tga  c1b_64x48.tga  c1b_min.tga  c1b_min_128.tga  c1b_min_block2.tga  c2.tga  cb-candle - コピー.json  cmake_install.cmake  compile_commands.json  diamond.tga  diamond10.tga  diamond11.tga  diamond12.tga  diamond13.tga  (+70 more)
app_src/: a.out  a2.out  a4_dump.txt  a5.out  a6.out  a7.out  a8.out  a_dump2.txt  approx2  approx2.bc  approx2.c  approx2.cpp  approx2_2  approx2_4  approx2_dump.txt  approx2_tmp.bc  approx2_tmp.s  cppt.cpp  cppt_tmp.bc  cppt_tmp.s  dump.txt  main.  main.bc  main2  main2.bc  main2.cpp  main2_dump.txt  main2_tmp.bc  main2_tmp.s  main3_dump.txt  main4_dump.txt  main5_dump.txt  main_dump.txt  main_dump2.txt  main_tmp.bc  main_tmp.s  routine_tmp.bc  routine_tmp.s  test  test.cpp  (+2 more)
exp_results/: c1_diffuse.tga  c1b.tga  c1b_005_dirvis.tga  c1b_016_4.tga  c1b_016_5.tga  c1b_032_dirvis.tga  c1b_064_dirvis.tga  c1b_064_dirvis_2.tga  make_out.txt  make_out10.txt  make_out11.txt  make_out12.txt  make_out2.txt  make_out3.txt  make_out4.txt  make_out5.txt  make_out6.txt  make_out7.txt  make_out8.txt  out.txt  out10.txt  out11.txt  out12.txt  out13.txt  out14.txt  out15.txt  out16.txt  out17.txt  out18.txt  out19.txt  out20.txt  out21.txt  out22.txt  out23.txt  out24.txt  out25.txt  out26.txt  out27.txt  out28.txt  out29.txt  (+46 more)
exp_results_2/: out10.txt  out11.txt  out12.txt  out13.txt  out4.txt  (+5 more)
(+914 files in other folders)
